Admin Assignment 1/src/force-app/main/default/objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Average_Feeedback__c</fullName>
        <description>Calculating Average Rating</description>
        <formula>Average_feedback__c  /  Total_Attendee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average-Feedback</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_feedback__c</fullName>
        <description>Rollup feedback records from Feedback object</description>
        <label>Average_feedback</label>
        <summarizedField>Feedback__c.Rating_c__c</summarizedField>
        <summaryForeignKey>Feedback__c.Training_Session_Lookup__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location__c</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_type__c</fullName>
        <label>Session type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Attendee__c</fullName>
        <description>Average rating from Feedback records</description>
        <label>Total_Attendee</label>
        <summaryForeignKey>Attendee__c.Training_Session_Lookup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Training_Session__c</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Training_Session ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training_Session</pluralLabel>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>true</active>
        <label>Webinar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Session_Date_Must_Be_In_The_Future</fullName>
        <active>true</active>
        <errorConditionFormula>Session_Date__c &lt; TODAY() + 1</errorConditionFormula>
        <errorMessage>Session date must be in the future</errorMessage>
    </validationRules>
</CustomObject>